# serializer version: 1
# name: test_first_time_user_state
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Last.fm',
      'entity_picture': 'image',
      'friendly_name': 'LastFM testaccount1',
      'last_played': None,
      'play_count': 0,
      'top_played': None,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.lastfm_testaccount1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Not Scrobbling',
  })
# ---
# name: test_non_existent_user
  None
# ---
# name: test_sensors
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Last.fm',
      'entity_picture': 'image',
      'friendly_name': 'LastFM testaccount1',
      'last_played': None,
      'play_count': 1,
      'top_played': None,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.lastfm_testaccount1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'artist - title',
  })
# ---
